[gd_scene load_steps=7 format=1]

[ext_resource path="res://Scripts/Game.gd" type="Script" id=1]
[ext_resource path="res://Sprites/Hammer.png" type="Texture" id=2]
[ext_resource path="res://Sprites/MediKit.png" type="Texture" id=3]
[ext_resource path="res://Sprites/HappyPlayer.png" type="Texture" id=4]
[ext_resource path="res://Sprites/Target.png" type="Texture" id=5]
[ext_resource path="res://Sprites/SadPlayer.png" type="Texture" id=6]

[node name="Game" type="Node2D"]

script/script = ExtResource( 1 )
autoStart = false

[node name="MainMenu" type="Node2D" parent="."]

process/pause_mode = 2
z/z = 3

[node name="Welcome" type="Label" parent="MainMenu"]

rect/scale = Vector2( 2, 2 )
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 320.0
margin/top = 0.0
margin/right = 424.0
margin/bottom = 14.0
text = "Don't be Greedy"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Start Level 1" type="Button" parent="MainMenu"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 384.0
margin/top = 32.0
margin/right = 475.0
margin/bottom = 52.0
toggle_mode = false
click_on_press = true
enabled_focus_mode = 2
shortcut = null
text = "Start Level 1"
flat = false

[node name="Start Level 2" type="Button" parent="MainMenu"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 384.0
margin/top = 64.0
margin/right = 475.0
margin/bottom = 84.0
toggle_mode = false
click_on_press = true
enabled_focus_mode = 2
shortcut = null
text = "Start Level 2"
flat = false

[node name="Start Level 3" type="Button" parent="MainMenu"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 384.0
margin/top = 96.0
margin/right = 475.0
margin/bottom = 116.0
toggle_mode = false
click_on_press = true
enabled_focus_mode = 2
shortcut = null
text = "Start Level 3"
flat = false

[node name="Resume" type="Button" parent="MainMenu"]

visibility/visible = false
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 384.0
margin/top = 192.0
margin/right = 448.0
margin/bottom = 212.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Resume"
flat = false

[node name="LevelMenu" type="Node2D" parent="."]

process/pause_mode = 2
visibility/visible = false
z/z = 3
__meta__ = {
"_edit_lock_": true
}

[node name="Label" type="Label" parent="LevelMenu"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 208.0
margin/top = 0.0
margin/right = 802.0
margin/bottom = 48.0
text = "Remember:
Every item has a weight and will slow you down and let you jump less high. So pick carefully. 
The more you have, the worse it is!"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="StartLevel" type="Button" parent="LevelMenu"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 528.0
margin/top = 280.0
margin/right = 593.0
margin/bottom = 300.0
custom_colors/font_color = Color( 0.138672, 1, 0.015625, 1 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Let's go!"
flat = false

[node name="Items" type="VButtonArray" parent="LevelMenu"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 208.0
margin/top = 48.0
margin/right = 248.0
margin/bottom = 88.0
flat = false
button/count = 0
button/min_button_size = -1.0
button/align = 1065353216

[node name="Hammer" type="CheckBox" parent="LevelMenu/Items"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 64.0
margin/right = 110.0
margin/bottom = 87.0
toggle_mode = true
enabled_focus_mode = 2
shortcut = null
text = "Hammer"
flat = false
align = 0

[node name="Label" type="Label" parent="LevelMenu/Items/Hammer"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 24.0
margin/top = 24.0
margin/right = 136.0
margin/bottom = 38.0
text = "Well.. A hammer.
Weight: 20kg"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Sprite" type="Sprite" parent="LevelMenu/Items/Hammer"]

transform/pos = Vector2( 152, 24 )
transform/rot = -20.0
transform/scale = Vector2( 4, 4 )
z/z = -2
texture = ExtResource( 2 )

[node name="MedKit" type="CheckBox" parent="LevelMenu/Items"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 115.0
margin/bottom = 23.0
toggle_mode = true
enabled_focus_mode = 2
shortcut = null
text = "MediPack"
flat = false
align = 0

[node name="Label" type="Label" parent="LevelMenu/Items/MedKit"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 16.0
margin/top = 24.0
margin/right = 103.0
margin/bottom = 55.0
text = "+2 life
Weight: 10 kg"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Sprite" type="Sprite" parent="LevelMenu/Items/MedKit"]

transform/pos = Vector2( 128, 24 )
transform/scale = Vector2( 4, 4 )
texture = ExtResource( 3 )

[node name="Minigun" type="CheckBox" parent="LevelMenu/Items"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 128.0
margin/right = 113.0
margin/bottom = 151.0
toggle_mode = true
enabled_focus_mode = 2
shortcut = null
text = "Minigun"
flat = false
align = 0

[node name="Label" type="Label" parent="LevelMenu/Items/Minigun"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 24.0
margin/top = 24.0
margin/right = 240.0
margin/bottom = 38.0
text = "This gun is heavy... But awesome!
Weight: 100kg"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="HUD" type="Node2D" parent="."]

z/z = 3

[node name="HealthLabel" type="Label" parent="HUD"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 0.0
margin/top = 0.0
margin/right = 40.0
margin/bottom = 14.0
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="WinningScreen" type="Node2D" parent="."]

visibility/visible = false

[node name="Label" type="Label" parent="WinningScreen"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 368.0
margin/top = 152.0
margin/right = 475.0
margin/bottom = 166.0
custom_colors/font_color = Color( 0.0674438, 0.863281, 0.0798788, 1 )
text = "Congratulations !"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Label1" type="Label" parent="WinningScreen"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 304.0
margin/top = 176.0
margin/right = 588.0
margin/bottom = 190.0
custom_colors/font_color = Color( 0.0674438, 0.863281, 0.0798788, 1 )
text = "You just finished a level. We are so happy!"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="HappyPlayer" type="Sprite" parent="WinningScreen"]

transform/pos = Vector2( 112, 264 )
transform/scale = Vector2( 8, 8 )
z/z = 1
texture = ExtResource( 4 )
offset = Vector2( 50, 0 )

[node name="Sprite" type="Sprite" parent="WinningScreen"]

transform/pos = Vector2( 136, 264 )
transform/scale = Vector2( 6, 6 )
texture = ExtResource( 5 )
offset = Vector2( 50, 0 )

[node name="LosingScreen" type="Node2D" parent="."]

visibility/visible = false

[node name="Label" type="Label" parent="LosingScreen"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 400.0
margin/top = 168.0
margin/right = 467.0
margin/bottom = 182.0
custom_colors/font_color = Color( 0.871094, 0.0986786, 0.0986786, 1 )
text = "Oh noooo!"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Label1" type="Label" parent="LosingScreen"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 400.0
margin/top = 200.0
margin/right = 498.0
margin/bottom = 214.0
custom_colors/font_color = Color( 0.871094, 0.0986786, 0.0986786, 1 )
text = "You just died :'("
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Sprite" type="Sprite" parent="LosingScreen"]

transform/pos = Vector2( 144, 272 )
transform/scale = Vector2( 6, 6 )
texture = ExtResource( 6 )
offset = Vector2( 50, 0 )

[connection signal="pressed" from="MainMenu/Start Level 1" to="." method="_on_Start_Level_1_pressed"]

[connection signal="pressed" from="MainMenu/Start Level 2" to="." method="_on_Start_Level_2_pressed"]

[connection signal="pressed" from="MainMenu/Start Level 3" to="." method="_on_Start_Level_3_pressed"]

[connection signal="pressed" from="MainMenu/Resume" to="." method="_on_Resume_pressed"]

[connection signal="pressed" from="LevelMenu/StartLevel" to="." method="_on_StartLevel_pressed"]


